force-app/main/default/objects/AVO_Employee_History__c/AVO_Employee_History__c.object-meta.xml
<CustomObject>
    <label>Employee History</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>