force-app/main/default/objects/AVO_Employee_History__c/fields/AVO_Permit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Employee Historys</relationshipLabel>
    <relationshipName>Employee_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>